NOTES-1: init basic CRUD
